# nix-examples

./: BuildOpenGL.nix  README.md  ace-default.nix  digital-ocean-OS.nix  documentation-4-local-projects.nix  my-NixOS-system-configuration.nix  pyShell.nix  static-default.nix
python-brownie/: brownie.nix  shell.nix  shell.nix~
scrappy-bestbuy-tutorial/: README.md  README.md~  WEBISOFT-DEMO.md  WEBISOFT-DEMO.md~  default.nix  scrappy-tutorial.cabal  shell.nix
scrappy-bestbuy-tutorial/app/: Main.hs
