cabal-version:      2.4
name:               scrappy-tutorial
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             galen
maintainer:         galen.sprout@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable scrappy-tutorial
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , scrappy
                    , http-client-tls
                    , http-client
                    , parsec
                    , text
                    , csv
                    , async
    hs-source-dirs:   app
    default-language: Haskell2010
